# elevenlabs-tts-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: lines.txt
samples/: MANIFEST.md
scripts/: generate_samples.py
src/eleven_tts/: __init__.py  cli.py  client.py  config.py  errors.py  logconf.py  retry.py  synth.py  voices.py
tests/: test_client.py  test_config.py  test_errors.py  test_integration.py  test_retry.py  test_synth.py
